InternexDev_Sandbox/src/objects/Account_Identifier__c.object
<CustomObject>
    <description>Used to store the “Transit Routing #” and “DD Account #”  of an account. These will be used to identify account when invoice number not found by the system in the cash app file during data upload. It has master detail relation with account object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Identifiers</relationshipLabel>
        <relationshipName>Account_Identifiers1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DD_Account__c</fullName>
        <label>DD Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LockBox__c</fullName>
        <description>Lockbox will be added from a file</description>
        <label>LockBox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Key__c</fullName>
        <description>Contains concatenation of Transit Routing # and DD Account #. It will be used for searching an account  when invoice numbers in bank files are missing or incorrect.</description>
        <formula>LockBox__c  &amp; Transit_Routing__c  &amp;  DD_Account__c</formula>
        <label>Missing Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transit_Routing__c</fullName>
        <label>Transit Routing #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Identifier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>LockBox__c</columns>
        <columns>Transit_Routing__c</columns>
        <columns>DD_Account__c</columns>
        <columns>Missing_Key__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Identifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Identifiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>